--- a/config.env
+++ b/config.env
@@ -1,32 +1,32 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1418071784:AAEFZiERpRnJW2O0ZtSZDS3-MbSZ49bqfnk"
+GDRIVE_FOLDER_ID = "0AKjswye1BTf0Uk9PVA"
+OWNER_ID = 1612661951
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "TRUE"
+TELEGRAM_API = 3088515
+TELEGRAM_HASH = "552d0d582db30ecc0c9e8969bbce5725"
 BASE_URL_OF_BOT = ""  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""  # Split by space
+AUTHORIZED_CHATS = "-1001439183634 1612661951"  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""  # Recommend limit status to 4 tasks
+USE_SERVICE_ACCOUNTS = "TRUE"
+INDEX_URL = "https://1.tarugski.workers.dev/0:"
+STATUS_LIMIT = "4"  # Recommend limit status to 4 tasks
 UPTOBOX_TOKEN = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
-BLOCK_MEGA_FOLDER = "" 
-BLOCK_MEGA_LINKS = ""
+BLOCK_MEGA_FOLDER = "TRUE" 
+BLOCK_MEGA_LINKS = "TRUE"
 STOP_DUPLICATE = ""
 RECURSIVE_SEARCH = ""  # Search in Subfolders (only for teamdriveid or root, you can't with folderid)
 SHORTENER = ""
@@ -35,25 +35,25 @@ SHORTENER_API = ""
 # Leech
 TG_SPLIT_SIZE = "2097152000"  # leave it empty for max size (2GB), or add size in bytes
 AS_DOCUMENT = ""
-EQUAL_SPLITS = ""
+EQUAL_SPLITS = "TRUE"
 AS_MEDIA_USERS = ""
-BOT_NO = ""
-CHAT_NAME = ""
+BOT_NO = "3"
+CHAT_NAME = "TARUGSKI -"
 
 # qBittorrent
 IS_VPS = ""  # Don't set this to True even if VPS, unless facing error with web server
 SERVER_PORT = "80"  # Only For VPS even if IS_VPS is False
 
 # RSS Feeds
-CHAT_ID = "" # For RSS feeds
+CHAT_ID = "-1001439183634" # For RSS feeds
 DELAY = "600" # 10 minutes
 INIT_FEEDS = "True" # To prevent RSS feed spam on redeploy
 CUSTOM_MESSAGES = ""
 
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
 # These are optional, if you don't know, simply leave them, don't fill anything in them.
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
+ACCOUNTS_ZIP_URL = "https://1.tarugski.workers.dev/0:/AKO/accounts.zip"
+TOKEN_PICKLE_URL = "https://1.tarugski.workers.dev/0:/AKO/token.pickle"
 MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
 
 # To use limit leave space between number and unit. Available units is (gb or GB, tb or TB)
